🦀 Remove Explicit Version Constraints for Internal Crates
Update Cargo.toml files to simplify internal dependency specifications:
- Remove hardcoded version requirements for flowrs-core
- Use relative path dependencies without explicit version constraints
- Maintain consistent approach across multiple crates (longrunning, reactive, timer)

The changes reduce redundancy in dependency management while preserving workspace-level version control.

--- a/crates/flowrs-longrunning/Cargo.toml
+++ b/crates/flowrs-longrunning/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/aitoroses/Pocket-Flow-Framework"
 authors = ["The Flowrs Authors"]
 
 [dependencies]
-flowrs-core = { path = "../flowrs-core", version = "=1.0.0" }
+flowrs-core = { path = "../flowrs-core" }
 async-trait = "0.1.77"
 chrono = "0.4.33"
 serde = { version = "1.0", features = ["derive"] }
