--- a/crates/flowrs-timer/Cargo.toml
+++ b/crates/flowrs-timer/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["workflow", "timer", "scheduling", "async"]
 categories = ["asynchronous"]
 
 [dependencies]
-flowrs-core = { path = "../flowrs-core", version = "=1.0.0" }
+flowrs-core = { path = "../flowrs-core" }
 async-trait = "0.1.77"
 chrono = "0.4.34"
 tokio = { version = "1.36.0", features = ["full"] }
