--- a/crates/flowrs-reactive/Cargo.toml
+++ b/crates/flowrs-reactive/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/aitoroses/Pocket-Flow-Framework"
 authors = ["The Flowrs Authors"]
 
 [dependencies]
-flowrs-core = { path = "../flowrs-core", version = "=1.0.0" }
+flowrs-core = { path = "../flowrs-core" }
 async-trait = "0.1.77"
 futures = "0.3.30"
 tokio = { version = "1.35.1", features = [
