--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -122,6 +122,16 @@ jobs:
                 # Check if the tag was successfully pushed
                 if git ls-remote --tags origin | grep -q "$TAG_NAME"; then
                   echo "Tag $TAG_NAME successfully pushed, release workflow should be triggered automatically."
+                  
+                  # Manually trigger the release workflow since automatic trigger is not reliable
+                  echo "Manually triggering the release workflow..."
+                  curl -X POST \
+                    -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                    -H "Accept: application/vnd.github.v3+json" \
+                    https://api.github.com/repos/${{ github.repository }}/actions/workflows/release.yml/dispatches \
+                    -d "{\"ref\":\"${{ github.ref }}\", \"inputs\": {\"tag\": \"$TAG_NAME\"}}"
+                  
+                  echo "Release workflow manually triggered."
                 else
                   echo "Warning: Tag $TAG_NAME not found on remote. Release workflow may not trigger."
                 fi
