🦀 Add Workspace Dependency Versioning Strategy for Crates.io Publishing
Implement a comprehensive approach to manage workspace dependency versions:
- Add explicit version specifications to internal dependencies in Cargo.toml
- Create a script to automatically update dependency versions
- Modify release workflow to support version synchronization
- Add ADR-0030 documenting the workspace dependency versioning strategy

The changes ensure smooth publishing to crates.io while maintaining a flexible local development workflow, with an automated approach to keeping internal dependency versions consistent.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,10 @@ jobs:
       - name: Run tests with all features
         run: cargo test --all-features
 
+      # Update dependency versions to match workspace version
+      - name: Update dependency versions
+        run: ./scripts/update_dependency_versions.sh
+
       # Publish subcrates first (needed for workspace dependencies)
       - name: Publish flowrs-core
         working-directory: ./crates/flowrs-core
