--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,12 +75,12 @@ serde_json.workspace = true
 tokio-stream.workspace = true
 
 # Feature-gated dependencies
-flowrs-core = { path = "./crates/flowrs-core", optional = true }
-flowrs-transform = { path = "./crates/flowrs-transform", optional = true }
-flowrs-event = { path = "./crates/flowrs-event", optional = true }
-flowrs-timer = { path = "./crates/flowrs-timer", optional = true }
-flowrs-longrunning = { path = "./crates/flowrs-longrunning", optional = true }
-flowrs-reactive = { path = "./crates/flowrs-reactive", optional = true }
+flowrs-core = { path = "./crates/flowrs-core", version = "1.0.2", optional = true }
+flowrs-transform = { path = "./crates/flowrs-transform", version = "1.0.2", optional = true }
+flowrs-event = { path = "./crates/flowrs-event", version = "1.0.2", optional = true }
+flowrs-timer = { path = "./crates/flowrs-timer", version = "1.0.2", optional = true }
+flowrs-longrunning = { path = "./crates/flowrs-longrunning", version = "1.0.2", optional = true }
+flowrs-reactive = { path = "./crates/flowrs-reactive", version = "1.0.2", optional = true }
 
 # Example configurations
 [[example]]
