🦀 Implement Workspace Inheritance and Version Update Scripts
Add comprehensive versioning strategy for Flowrs workspace:
- Update subcrate Cargo.toml files to use `version.workspace = true`
- Create `update_subcrate_versions.sh` script to ensure workspace version inheritance
- Add version bump diagram to document release process
- Modify release workflow to run version update scripts
- Ensure consistent versioning across all internal crates

The changes provide a robust mechanism for managing versions in a Cargo workspace, reducing manual version maintenance and improving release consistency.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,10 @@ jobs:
       - name: Run tests with all features
         run: cargo test --all-features
 
+      # Update subcrate versions to use workspace inheritance
+      - name: Update subcrate versions
+        run: ./scripts/update_subcrate_versions.sh
+
       # Update dependency versions to match workspace version
       - name: Update dependency versions
         run: ./scripts/update_dependency_versions.sh
