--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+    types: [opened, synchronize, reopened]
 
 # Sets permissions of the GITHUB_TOKEN to allow only reading from the repository
 permissions:
@@ -22,6 +23,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         rust: [stable]
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v3
