--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ description.workspace = true
 # Define features
 [features]
 default = ["core"]
+# Define features with dependencies on subcrates
 core = ["floxide-core"]
 transform = ["core", "floxide-transform"]
 event = ["core", "floxide-event"]
@@ -74,13 +75,13 @@ serde.workspace = true
 serde_json.workspace = true
 tokio-stream.workspace = true
 
-# Feature-gated dependencies
-floxide-core = { path = "./crates/floxide-core", version = "1.0.3", optional = true }
-floxide-transform = { path = "./crates/floxide-transform", version = "1.0.3", optional = true }
-floxide-event = { path = "./crates/floxide-event", version = "1.0.3", optional = true }
-floxide-timer = { path = "./crates/floxide-timer", version = "1.0.3", optional = true }
-floxide-longrunning = { path = "./crates/floxide-longrunning", version = "1.0.3", optional = true }
-floxide-reactive = { path = "./crates/floxide-reactive", version = "1.0.3", optional = true }
+# Feature-gated dependencies on subcrates
+floxide-core = { path = "./crates/floxide-core", version = "1.0.4", optional = true }
+floxide-transform = { path = "./crates/floxide-transform", version = "1.0.4", optional = true }
+floxide-event = { path = "./crates/floxide-event", version = "1.0.4", optional = true }
+floxide-timer = { path = "./crates/floxide-timer", version = "1.0.4", optional = true }
+floxide-longrunning = { path = "./crates/floxide-longrunning", version = "1.0.4", optional = true }
+floxide-reactive = { path = "./crates/floxide-reactive", version = "1.0.4", optional = true }
 
 # Example configurations
 [[example]]
