🦀 Cleanup Release Workflow and Publish Configuration
Streamline release and publishing processes by:
- Removing `--allow-branch` parameter from cargo-workspaces publish command
- Simplifying GitHub Actions release workflow token configuration
- Updating release script to match workflow changes
- Documenting compatibility fixes in ADR-0036

The changes resolve potential conflicts in the publishing process and simplify the release workflow configuration.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.WORKFLOW_PAT || github.token }}
+          token: ${{ github.token }}
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
@@ -140,7 +140,7 @@ jobs:
         if: github.event.inputs.dry_run != 'true' && github.event.inputs.publish == 'true'
         run: |
           echo "Publishing version ${{ steps.bump_version.outputs.VERSION }} to crates.io"
-          cargo workspaces publish --from-git --no-git-commit --allow-branch="*" --token ${{ secrets.CRATES_IO_TOKEN }}
+          cargo workspaces publish --from-git --no-git-commit --token ${{ secrets.CRATES_IO_TOKEN }}
         env:
           CRATES_IO_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
 
