--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
           fi
 
           # Run the version bump
-          ./scripts/release_with_workspaces.sh ${{ github.event.inputs.bump_type }} $ARGS --skip-publish
+          ./scripts/release_with_workspaces.sh ${{ github.event.inputs.bump_type }} $ARGS --skip-publish --no-git-commit
 
           # Get the new version
           NEW_VERSION=$(grep -m 1 'version = ' Cargo.toml | cut -d '"' -f 2)
@@ -102,18 +102,18 @@ jobs:
               echo "Tag $TAG_NAME exists, force updating"
               git tag -d "$TAG_NAME"
               git push origin ":refs/tags/$TAG_NAME" || true
-              
+
               # Also delete individual crate tags if they exist
               for CRATE_TAG in $(git tag | grep "@${{ steps.bump_version.outputs.VERSION }}$"); do
                 echo "Deleting individual crate tag: $CRATE_TAG"
                 git tag -d "$CRATE_TAG"
                 git push origin ":refs/tags/$CRATE_TAG" || true
               done
-              
+
               # Create new tag
               git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
               git push origin "$TAG_NAME"
-              
+
               echo "Tags updated successfully"
             else
               echo "Tag $TAG_NAME already exists. Use force_tag option to update it."
@@ -140,7 +140,7 @@ jobs:
         if: github.event.inputs.dry_run != 'true' && github.event.inputs.publish == 'true'
         run: |
           echo "Publishing version ${{ steps.bump_version.outputs.VERSION }} to crates.io"
-          cargo workspaces publish --from-git --no-git-commit --token ${{ secrets.CRATES_IO_TOKEN }}
+          cargo workspaces publish --from-git --no-git-commit --token ${{ secrets.CRATES_IO_TOKEN }} --yes
         env:
           CRATES_IO_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
 
@@ -166,13 +166,13 @@ jobs:
             echo "Mode: Dry Run (no changes made)"
           else
             echo "Mode: Production"
-            
+
             if [ "${{ github.event.inputs.skip_tagging }}" != "true" ]; then
               echo "Tag: ${{ steps.create_tag.outputs.TAG_NAME }}"
             else
               echo "Tagging: Skipped"
             fi
-            
+
             if [ "${{ github.event.inputs.publish }}" = "true" ]; then
               echo "Published: Yes (to crates.io)"
               echo "GitHub Release: Created"
