--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,12 +76,12 @@ serde_json.workspace = true
 tokio-stream.workspace = true
 
 # Feature-gated dependencies on subcrates
-floxide-core = { path = "./crates/floxide-core", version = "1.0.4", optional = true }
-floxide-transform = { path = "./crates/floxide-transform", version = "1.0.4", optional = true }
-floxide-event = { path = "./crates/floxide-event", version = "1.0.4", optional = true }
-floxide-timer = { path = "./crates/floxide-timer", version = "1.0.4", optional = true }
-floxide-longrunning = { path = "./crates/floxide-longrunning", version = "1.0.4", optional = true }
-floxide-reactive = { path = "./crates/floxide-reactive", version = "1.0.4", optional = true }
+floxide-core = { path = "./crates/floxide-core" }
+floxide-transform = { path = "./crates/floxide-transform", optional = true }
+floxide-event = { path = "./crates/floxide-event", optional = true }
+floxide-timer = { path = "./crates/floxide-timer", optional = true }
+floxide-longrunning = { path = "./crates/floxide-longrunning", optional = true }
+floxide-reactive = { path = "./crates/floxide-reactive", optional = true }
 
 # Example configurations
 [[example]]
